# ChangeLog for dev-ruby/ruby-atk
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-atk/ChangeLog,v 1.28 2006/10/20 20:06:11 agriffis Exp $

  20 Oct 2006; Aron Griffis <agriffis@gentoo.org> ruby-atk-0.14.1.ebuild:
  Mark 0.14.1 stable on alpha

*ruby-atk-0.15.0 (29 Aug 2006)

  29 Aug 2006; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  +ruby-atk-0.15.0.ebuild:
  Version bump

  29 Apr 2006; Simon Stelling <blubb@gentoo.org> ruby-atk-0.14.1.ebuild:
  stable on amd64

  30 Mar 2006; Ferris McCormick <fmccor@gentoo.org> ruby-atk-0.14.1.ebuild:
  Stable on sparc (version bump).

  28 Mar 2006; Aron Griffis <agriffis@gentoo.org> ruby-atk-0.14.1.ebuild:
  Mark 0.14.1 stable on ia64

  26 Mar 2006; Michael Hanselmann <hansmi@gentoo.org>
  ruby-atk-0.14.1.ebuild:
  Stable on ppc.

  24 Mar 2006; Caleb Tennis <caleb@gentoo.org> ruby-atk-0.14.1.ebuild:
  x86 stable

*ruby-atk-0.14.1 (15 Nov 2005)

  15 Nov 2005; Michael Kohl <citizen428@gentoo.org> +ruby-atk-0.14.1.ebuild:
  Version bump. See bugs #103470 and #109641.

  25 Aug 2005; Aron Griffis <agriffis@gentoo.org> ruby-atk-0.12.0.ebuild:
  stable on ia64

  13 Aug 2005; Michael Hanselmann <hansmi@gentoo.org>
  ruby-atk-0.12.0.ebuild:
  Stable on ppc.

  02 Aug 2005; Simon Stelling <blubb@gentoo.org> ruby-atk-0.12.0.ebuild:
  stable on amd64

  02 Jul 2005; Bryan Østergaard <kloeri@gentoo.org> ruby-atk-0.12.0.ebuild:
  Stable on alpha.

  27 Jun 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  ruby-atk-0.12.0.ebuild:
  Stable on sparc

  26 Jun 2005; Mamoru KOMACHI <usata@gentoo.org> -ruby-atk-0.9.1.ebuild,
  ruby-atk-0.11.0.ebuild, ruby-atk-0.12.0.ebuild:
  Stable on x86.

  21 May 2005; Jason Wever <weeve@gentoo.org> ruby-atk-0.10.1.ebuild:
  Stable on SPARC.

  24 Apr 2005; Simon Stelling <blubb@gentoo.org> ruby-atk-0.10.1.ebuild:
  stable on amd64

  01 Apr 2005; Aron Griffis <agriffis@gentoo.org> ruby-atk-0.10.1.ebuild:
  stable on ia64
