@@ -1,0 +1,13 @@
+# Copyright 1999-2006 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-atk/Attic/ruby-atk-0.16.0.ebuild,v 1.1 2006/12/30 04:17:52 metalgod Exp $
+
+inherit ruby ruby-gnome2
+
+DESCRIPTION="Ruby Atk bindings"
+KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~sparc ~x86"
+IUSE=""
+USE_RUBY="ruby18 ruby19"
+DEPEND="dev-libs/atk"
+RDEPEND="${DEPEND}
+	>=dev-ruby/ruby-glib2-${PV}"
