@@ -1,0 +1,3 @@
+MD5 b3b4f81ef0fe2ce6b3f965bb7c6d3686 ruby-gnome2-all-0.16.0.tar.gz 1208856
+RMD160 c83c7cdcf633ad5cc213180f641a6c8f18002a9c ruby-gnome2-all-0.16.0.tar.gz 1208856
+SHA256 0910f08c5224bc39aad66c46b506e5c97e260475ede6b427d5365a9ef2d69ad4 ruby-gnome2-all-0.16.0.tar.gz 1208856
