@@ -1,6 +1,13 @@
 # ChangeLog for dev-ruby/ruby-gdkpixbuf2
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gdkpixbuf2/ChangeLog,v 1.33 2006/10/20 20:10:35 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gdkpixbuf2/ChangeLog,v 1.34 2006/12/30 04:20:29 metalgod Exp $
+
+*ruby-gdkpixbuf2-0.16.0 (30 Dec 2006)
+
+  30 Dec 2006; Luis Medinas <metalgod@gentoo.org>
+  -ruby-gdkpixbuf2-0.10.1.ebuild, -ruby-gdkpixbuf2-0.11.0.ebuild,
+  -ruby-gdkpixbuf2-0.12.0.ebuild, +ruby-gdkpixbuf2-0.16.0.ebuild:
+  Version Bump. Remove older versions.
 
   20 Oct 2006; Aron Griffis <agriffis@gentoo.org>
   ruby-gdkpixbuf2-0.14.1.ebuild:
