@@ -1,6 +1,13 @@
 # ChangeLog for dev-ruby/ruby-pango
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-pango/ChangeLog,v 1.33 2006/10/20 20:02:07 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-pango/ChangeLog,v 1.34 2006/12/30 04:15:22 metalgod Exp $
+
+*ruby-pango-0.16.0 (30 Dec 2006)
+
+  30 Dec 2006; Luis Medinas <metalgod@gentoo.org> -ruby-pango-0.10.1.ebuild,
+  -ruby-pango-0.11.0.ebuild, -ruby-pango-0.12.0.ebuild,
+  +ruby-pango-0.16.0.ebuild:
+  Version Bump. Remove older versions.
 
   20 Oct 2006; Aron Griffis <agriffis@gentoo.org> ruby-pango-0.14.1.ebuild:
   Mark 0.14.1 stable on alpha
