@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/ruby-atk
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-atk/ChangeLog,v 1.28 2006/10/20 20:06:11 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-atk/ChangeLog,v 1.29 2006/12/30 04:17:52 metalgod Exp $
+
+*ruby-atk-0.16.0 (30 Dec 2006)
+
+  30 Dec 2006; Luis Medinas <metalgod@gentoo.org> -ruby-atk-0.10.1.ebuild,
+  -ruby-atk-0.11.0.ebuild, -ruby-atk-0.12.0.ebuild, +ruby-atk-0.16.0.ebuild:
+  Version Bump. Remove older versions.
 
   20 Oct 2006; Aron Griffis <agriffis@gentoo.org> ruby-atk-0.14.1.ebuild:
   Mark 0.14.1 stable on alpha
